fix site-title alignment with multiple social icons

--- a/pendant/style.css
+++ b/pendant/style.css
@@ -274,3 +274,8 @@ body > .is-root-container > .wp-block-template-part > .wp-block-cover,
 		text-align: right;
 	}
 }
+
+.wp-block-group.pendant-header-container {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+}
